# logging-plugin

./: pyproject.toml  setup.py
logging/: __init__.py
logging_plugin/: __init__.py
